<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animationlogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/optima_bold"
            android:text="@string/welcome_back"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/please_login_to_continue"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_16sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/bg_textview"
            android:elevation="@dimen/_10dp"
            android:paddingHorizontal="@dimen/_5dp"
            android:paddingVertical="@dimen/_13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/bg_textview"
            android:elevation="@dimen/_10dp"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_5dp"
            android:paddingVertical="@dimen/_13dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxBreakingNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_8dp"
            android:buttonTint="@color/dotorcolor"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/remember_me"
            android:textColor="@color/textcolor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            style="@style/Button.Full"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_40dp"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/_18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_170dp"
                android:layout_height="@dimen/_1dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5dp"
                android:background="@color/red_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Or"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="@dimen/_170dp"
                android:layout_height="@dimen/_1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5dp"
                android:background="@color/red_20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/im_facebook" />

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/im_google" />

            <ImageView
                android:id="@+id/iv_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/im_apple" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/not_a_member"
            android:textSize="@dimen/_18sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>